--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Generate Prisma Client
         run: pnpm --filter api exec prisma generate
-        env: DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        env: 
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Build project
         run: pnpm build
