--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Generate Prisma Client
-        run: pnpm --filter api exec pnpm prisma generate
+        run: pnpm --filter api run generate
         env: 
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
