--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
     "dev": "npx open-cli http://localhost:3001/status && tsx watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "generate": "prisma generate"
   },
   "keywords": [],
   "author": "",
