--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,11 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
+
       - name: Generate Prisma Client
-        run: pnpm --filter api run generate
+        run: pnpm --filter api exec prisma generate
         env: 
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
