--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "ISC",
   "packageManager": "pnpm@10.27.0",
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
+    "@types/node": "^25.0.3",
     "open-cli": "^8.0.0",
     "turbo": "^2.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
