--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -22,7 +22,15 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+        "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@features/*": ["src/features/*"],
+      "@dashboard/*": ["src/features/dashboard/*"],
+      "@dashboard-balance/*": ["src/features/dashboard/components/dashboard-balance/*"]
+    }
   },
   "include": ["src"]
 }
