[Feature] - created Dashboard container component along with planning the contents of the DashboardBalance component

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -28,8 +28,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@features/*": ["src/features/*"],
-      "@dashboard/*": ["src/features/dashboard/*"],
-      "@dashboard-balance/*": ["src/features/dashboard/components/dashboard-balance/*"]
+      "@dashboard/*": ["src/features/dashboard/components/Dashboard/*"],
+      "@dashboard-balance/*": ["src/features/dashboard/components/DashboardBalance/*"],
     }
   },
   "include": ["src"]
