[Feature] - created new MarketIndicator component

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -36,7 +36,8 @@
         "src/features/dashboard/components/DashboardMarketOverview/*"
       ],
       "@dashboard-types/*": ["src/features/dashboard/types/*"],
-      "@components-types/*": ["src/components/types/*"]
+      "@components-types/*": ["src/components/types/*"],
+      "@components/*": ["src/components/*"]
     }
   },
   "include": ["src"]
