[Feature] - moved logic for calculating negative or positive color into own utility function and global classes

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -43,7 +43,8 @@
       ],
       "@dashboard-types/*": ["src/features/dashboard/types/*"],
       "@components-types/*": ["src/components/types/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@utilities": ["src/utilities/utilities"]
     }
   },
   "include": ["src"]
