[Feature] - setup state with Redux ToolKit and proved state flow works on dashboard balance amount

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -47,7 +47,8 @@
       "@dashboard-types/*": ["src/features/dashboard/types/*"],
       "@components-types/*": ["src/components/types/*"],
       "@components/*": ["src/components/*"],
-      "@utilities": ["src/utilities/utilities"]
+      "@utilities": ["src/utilities/utilities"],
+      "@store-dashboard/*": ["src/store/dashboard/*"]
     }
   },
   "include": ["src"]
