--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,7 +15,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "@project/shared-types": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
