--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -13,7 +13,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "moduleDetection": "force",
     "noEmit": false,
     "emitDeclarationOnly": true,
@@ -56,5 +56,4 @@
     }
   },
   "include": ["src", "../../packages/shared-types/src"]
-  // "references": [{ "path": "../../packages/shared-types" }]
 }
