--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@project/shared-types": "workspace:*",
     "@reduxjs/toolkit": "^2.11.2",
+    "@tanstack/react-query": "^5.90.19",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
