--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -47,5 +47,6 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force"
   },
+  "include": ["src/**/*.json"],
   "references": [{ "path": "../../packages/shared-types" }]
 }
