[Feature] - setup new redux state for navigation and can toggle whether side navigation state is open or not

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -55,6 +55,7 @@
       "@components/*": ["src/components/*"],
       "@utilities": ["src/utilities/utilities"],
       "@store-dashboard/*": ["src/store/dashboard/*"],
+      "@store-navigation/*": ["src/store/navigation/*"],
       "@project/shared-types": ["../../packages/shared-types/src/index.ts"]
     }
   },
