--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -50,6 +50,10 @@
       "@dashboard-types/*": ["src/features/dashboard/types/*"],
       "@search/*": ["src/features/search/components/Search/*"],
       "@search-types/*": ["src/features/search/types/*"],
+      "@portfolio/*": ["src/features/portfolio/components/Portfolio/*"],
+      "@portfolio-types/*": ["src/features/portfolio/types/*"],
+      "@settings/*": ["src/features/settings/components/Settings/*"],
+      "@settings-types/*": ["src/features/settings/types/*"],
       "@navigation/*": ["src/features/navigation/*"],
       "@navigation-components/*": ["src/features/navigation/components/*"],
       "@navigation-types/*": ["src/features/navigation/types/*"],
